# jingweiprinter

./: .gitignore  CMakeLists.txt  README.md
.run/: dtoQJson.test1.run.xml  jingweiprinter-test.run.xml  jingweiprinter-ubt.run.xml  jingweiprinter_tst.run.xml
doc/http/: plotting3d.http
src/: config.h.in
src/core/: loggerstarter.cpp  loggerstarter.h  qcorestarter.cpp  qcorestarter.h
src/core/qgis/: Processor.cpp  Processor.h
src/core/qgis/layout/: JwLayout3D.cpp
